--- a/RPGVXAcecn/rgss/sc_array.html
+++ b/RPGVXAcecn/rgss/sc_array.html
@@ -72,7 +72,7 @@ p ary                        # =&gt; [0, "inserted", "a", 99, "c", 3]</PRE>
   <DD>
   <P>将 self 和 other 的内容连结起来并返回一个新的数组。若 <VAR>other</VAR>
   不是数组，则使用 other.to_ary 的返回值。若返回值不是数组，抛出 <A
-  href="s_exceptions.html#TypeError">TypeError型错误）</A> 。</P><PRE>a = [1, 2]
+  href="s_exceptions.html#TypeError">TypeError</A> 异常。</P><PRE>a = [1, 2]
 b = [8, 9]
 p a + b     # =&gt; [1, 2, 8, 9]
 p a         # =&gt; [1, 2]        (不变)
